# cspmakeagame

./: .gitignore  Cargo.toml  README.md  buildandrun.sh  deletecontainer.sh  deleteimage.sh  docker-compose.yml  dockerfile  nginx.conf  package-lock.json
files/: dockerfile  index.js  package-lock.json  package.json
src/: main.rs
web/: index.html  index.js  package-lock.json  run.sh
web/pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
