[package]
name = "cspmakeagame"
version = "0.1.0"
edition = "2021"

[dependencies]
three-d = { version = "0.17.0", features=["egui-gui"] }
three-d-asset = {version = "0.7",features = ["gltf", "jpeg", "png", "hdr", "http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"

[lib]
crate-type = ["cdylib", "rlib"]
